############################################################################
# Copyright ESIEE Paris (2018)                                             #
#                                                                          #
# Contributor(s) : Benjamin Perret                                         #
#                                                                          #
# Distributed under the terms of the CECILL-B License.                     #
#                                                                          #
# The full license is in the file LICENSE, distributed with this software. #
############################################################################

add_subdirectory(accumulator)
add_subdirectory(algo)
add_subdirectory(detail)
add_subdirectory(hierarchy)
add_subdirectory(image)
add_subdirectory(io)
add_subdirectory(structure)